--- a/대바늘뜨기.html
+++ b/대바늘뜨기.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="뜨개질.html">뜨개질</a></h1>
+  <h1><a href="index.html">뜨개질</a></h1>
 <ul>
   <li> <a href="대바늘뜨기.html">대바늘뜨기</a></li>
   <li> <a href="코바늘뜨기.html">코바늘뜨기</a></li>
