웹사이트 완성

--- a/코바늘뜨기.html
+++ b/코바늘뜨기.html
@@ -11,7 +11,7 @@
   <li> <a href="코바늘뜨기.html">코바늘뜨기</a></li>
 </ul>
  <h1><a href="https://www.youtube.com/watch?v=3vw_J0tV9-4" target="_blank" title="코바늘뜨는방법">코바늘</a></h1>
- <img src="_TuIdedBPwQ (2).jpg" alt="My Image" width="800" height="500">
+ <img src="zOf_j3XJTB4.jpg" width="800" height="500">
 <p>코바늘 한 개를 사용하여 하나의 코만으로 계속 연결해 떠 나간다.<br>
   코바늘은 오른손으로 바늘귀에서 5cm 정도 떨어진 곳을 잡고 가운뎃손가락으로 가볍게 받쳐 준다. 그리고, 실은 왼손 새끼손가락에 한 번 감고 집게손가락에 걸친 후, 엄지손가락과 가운뎃손가락으로 잡는다.
   레이스실을 사용하여 뜨는 것을 <u><strong><a href="https://www.youtube.com/watch?v=-p9CuDu8XsE" target="_blank" title="레이스뜨기하는방법">레이스뜨기</a></strong></u>라 하고, 털실로 뜨는 것을 코바늘뜨기라고 한다.<br>
